--- a/hugo.toml
+++ b/hugo.toml
@@ -20,7 +20,7 @@ theme = 'hugo-book'
   BookServiceWorker = false
   BookTranslatedOnly = false
 
-[[menu.nav]]
+[[menu.main]]
   name = "Home"
   url = "/"
   weight = 1
